# pie_todo

./: .gitignore  CMakeLists.txt  README.md
scripts/: setup.sh
src/: PieTodo.def  Shared.cpp  Shared.h  TodoManager.cpp  TodoManager.h  Version.h  dllmain.cpp  entry.cpp
toolchains/: linux-mingw-w64.cmake
